--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -14,7 +14,7 @@
 		<div class="container h-100">
 			<div class="row justify-content-md-center h-100">
 				<div class="card-wrapper">
-					<div class="brand">]
+					<div class="brand">
 						<img src="img/logo.jpg">
 					</div>
 					<div class="card fat">
